Working with Scaffold

--- a/02 -  Dominando o ASP.NET CORE MVC/DEMO/Demos VIEW/DemoMVC/DemoMVC/appsettings.json
+++ b/02 -  Dominando o ASP.NET CORE MVC/DEMO/Demos VIEW/DemoMVC/DemoMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DemoMVCContext": "Server=(localdb)\\mssqllocaldb;Database=DemoMVCContext-d09bb2e0-69cf-41e2-88eb-fb6a99377475;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
