--- a/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Dev-Assuncao.AppSite.csproj
+++ b/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Dev-Assuncao.AppSite.csproj
@@ -25,6 +25,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
