--- a/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Dev_Assuncao.AppSite.csproj
+++ b/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Dev_Assuncao.AppSite.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
@@ -25,6 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Produtos\Data\" />
+    <Folder Include="Areas\Produtos\Models\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
