--- a/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
+++ b/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
@@ -5,6 +5,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20211029021933_Database.cs" />
+    <Compile Remove="Migrations\20211029021933_Database.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
