Learning about error handling

--- a/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
+++ b/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>be32f5e4-1563-478f-b435-5c75fa8e728c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
