--- a/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
+++ b/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/AspNetCoreIdentity.csproj
@@ -13,6 +13,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="KissLog" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
