--- a/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/appsettings.Production.json
+++ b/02 -  Dominando o ASP.NET CORE MVC/Identity/AspNetCoreIdentity/AspNetCoreIdentity/appsettings.Production.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "KissLog.OrganizationId": "",
+  "KissLog.ApplicationId": "_ApplicationId_",
+  "KissLog.ApiUrl": "https://api.kisslog.net"
 }
