--- a/03 - REST com ASP.NET Core WebAPI/Criando minha primeira WebAPI/MinhaAPICore/MinhaAPICore/MinhaAPICore.csproj
+++ b/03 - REST com ASP.NET Core WebAPI/Criando minha primeira WebAPI/MinhaAPICore/MinhaAPICore/MinhaAPICore.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="2.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
